--- a/style.css
+++ b/style.css
@@ -1,13 +1,22 @@
+body {
+	font-family: 'Cabin Sketch', cursive;
+}
+
 table {
 	margin: 0 auto;
-	border: 20px solid rgb(53, 167, 110);
+	border: 20px solid rgb(241, 94, 180);
+}
+
+input {
+	font-family: inherit;
+	font-size: 2rem;
 }
 
 td {
-    width: 50px;
-    height: 50px;
+    width: 100px;
+    height: 100px;
     border-width: 0px;
-    border: none none;
+    border: none;
 }
 
 input[type="button"] {
@@ -19,8 +28,9 @@ input[type="button"] {
     background: rgb(64, 199, 129);
     box-shadow: 0 -3px rgb(53, 167, 110) inset;
     transition: 0.2s;
-    width: 50px;
-    height: 50px;
+    width: 100px;
+	height: 100px;
+	border: none;
 }
 
 input[type="button"]:hover {
@@ -33,8 +43,9 @@ input[type="button"]:active {
 }
 
 input[type="text"] {
-    width: 220px;
-    height: 30px;
+    width: 100%;
+    height: 60px;
     background: rgb(33, 147, 90);
-    color: white;
+	color: white;
+	border: none;
 }
